
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int _GLFWwindow ;


 int fprintf (int ,char*) ;
 int stderr ;

void _glfwPlatformGetWindowFrameSize(_GLFWwindow* window,
                                     int* left, int* top,
                                     int* right, int* bottom)
{

    fprintf(stderr, "_glfwPlatformGetWindowFrameSize not implemented yet\n");
}
